feat: event list api integration
