# backend/models/event_model.js
@@ -1,49 +1,54 @@
-const { Sequelize, DataTypes } = require('sequelize');
+const { Sequelize, DataTypes } = require("sequelize");
 
 // Initialize Sequelize with MySQL connection
-const sequelize = new Sequelize('mysql://root:root@localhost:3306/test'); // Replace with your DB credentials
+const sequelize = new Sequelize("mysql://root:root@localhost:3306/test"); // Replace with your DB credentials
 
-const Event = sequelize.define('Event', {
-  event_id: {
-    type: DataTypes.INTEGER,
-    primaryKey: true,
-    autoIncrement: true,
+const Event = sequelize.define(
+  "Event",
+  {
+    event_id: {
+      type: DataTypes.INTEGER,
+      primaryKey: true,
+      autoIncrement: true,
+    },
+    event_name: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+    event_date: {
+      type: DataTypes.DATE,
+      allowNull: false,
+    },
+    city: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+    description: {
+      type: DataTypes.TEXT,
+      allowNull: true,
+    },
+    category: {
+      type: DataTypes.STRING,
+      allowNull: true,
+    },
+    latitude: {
+      type: DataTypes.DECIMAL(9, 6),
+      allowNull: true,
+    },
+    longitude: {
+      type: DataTypes.DECIMAL(9, 6),
+      allowNull: true,
+    },
   },
-  event_name: {
-    type: DataTypes.STRING,
-    allowNull: false,
-  },
-  event_date: {
-    type: DataTypes.DATE,
-    allowNull: false,
-  },
-  city: {
-    type: DataTypes.STRING,
-    allowNull: false,
-  },
-  description: {
-    type: DataTypes.TEXT,
-    allowNull: true,
-  },
-  category: {
-    type: DataTypes.STRING,
-    allowNull: true,
-  },
-  latitude: {
-    type: DataTypes.DECIMAL(9, 6),
-    allowNull: true,
-  },
-  longitude: {
-    type: DataTypes.DECIMAL(9, 6),
-    allowNull: true,
-  },
-}, {
-    tableName: 'events', // This is the name of your table
+  {
+    tableName: "events", // This is the name of your table
     timestamps: false, // If you don't want the `createdAt` and `updatedAt` fields
-  });
+  }
+);
 
-sequelize.sync()
-.then(() => console.log('Event table has been synced successfully.'))
-.catch(err => console.log('Error syncing User table:', err));
+sequelize
+  .sync()
+  .then(() => console.log("Event table has been synced successfully."))
+  .catch((err) => console.log("Error syncing Event table:", err));
 
 module.exports = Event;
